<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.jennifermontano.petsjenny.MENU_OPCIONES.ActivityAbout"
    >

    <include android:id="@+id/miActionBar"
        android:layout="@layout/actionbar"
        >
    </include>

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_about"
        android:textColor="@color/letraTitulo"
        android:layout_marginTop="67dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tvCreador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_creador"
        android:textColor="@color/textoColor"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/tvAbout"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/tvOcupacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCreador"
        android:textColor="@color/textoColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/texto_ocupacion"
        />

    <TextView
        android:id="@+id/tvHobbie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/texto_hobbie"
        android:textColor="@color/textoColor"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:srcCompat="@drawable/imgpetshop"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
